# circleci-smarter-testing-demo-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml  test-suites.yml
myproj/: __init__.py
myproj/api/: handlers.py
myproj/demo/: health.py
myproj/lib/: array.py  math.py  string_utils.py
myproj/services/: calculator.py
myproj/utils/: slug.py  validation.py
tests/: conftest.py  test_api_handlers.py  test_array.py  test_array_edge.py  test_batch_array_01.py  test_batch_array_02.py  test_batch_array_03.py  test_batch_array_04.py  test_batch_array_05.py  test_batch_calc_01.py  test_batch_calc_02.py  test_batch_calc_03.py  test_batch_calc_04.py  test_batch_calc_05.py  test_batch_math_01.py  test_batch_math_02.py  test_batch_math_03.py  test_batch_math_04.py  test_batch_math_05.py  test_batch_string_01.py  test_batch_string_02.py  test_batch_string_03.py  test_batch_string_04.py  test_batch_string_05.py  test_calculator.py  test_calculator_edge.py  test_demo_health.py  test_integration.py  test_math.py  test_math_edge.py  test_slug.py  test_slug_edge.py  test_string_utils.py  test_string_utils_edge.py  test_validation.py  test_validation_edge.py
