[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myproj"
version = "1.0.0"
description = "Demo for CircleCI Smarter Testing with pytest"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-circleci-coverage @ git+https://github.com/circleci/pytest-circleci-coverage.git",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
junit_family = "xunit2"
